improve spacing issue on form

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.clear{
+	clear:both;
+}
 .selectionArea{
 	padding:2%;
 	width:340px;
@@ -14,10 +17,29 @@
 	display:none;
 }
 
-.stat{
-	text-decoration: none;
-}
-
 .abilityscores{
 	list-style-type: none;
 }
+
+
+.stat{
+	text-align:left;
+	margin:8px;
+	text-decoration: none;
+	border:1px solid;
+	width: 180px;
+}
+
+.minusButton{
+	margin-left:5px;
+	margin-right:10px;
+}
+
+.statlabel{
+	font-size:18px;
+}
+
+.statButtons{
+	float:right;
+}
+
